transition added to titles on all pages and moblie skillslist spacing fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -135,13 +135,11 @@
 	}
 
 	.skills {
-		margin-bottom: -1.2rem;
-		width: 18.8rem;
+		width: 20rem;
 	}
 
 	.skillsList {
 		list-style: none;
-		margin: 0 0 2rem 1.2rem;
 		padding: 0;
 	}
 
